--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets/music/
     - assets/voiceover/
     - assets/voiceover/Sunny_Windy/
+    - assets/voiceover/Sunny's_Big_Sneeze/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
